<resources>
    <string name="app_name">A2X</string>
    <string name="pair_new_device">Pair New Device</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="looping">Looping</string>
    <string name="activity">Activity</string>
    <string name="val">VAL</string>
    <string name="add">+</string>
    <string name="mode">Mode</string>
    <string name="bt_name">bt_name</string>
    <string name="timing">timing</string>
    <string name="value_timing">value timing</string>
    <string name="min">-</string>
    <string name="minmin">--</string>
    <string name="plus">+</string>
    <string name="blip_time">Blip Time</string>
    <string name="value_blip_time">value blip time</string>
    <string name="ont">ONT</string>
    <string name="value_ont">value ont</string>
    <string name="offt">OFFT</string>
    <string name="value_offt">value offt</string>
    <string name="value_abt">value abt</string>
    <string name="abt">ABT</string>
    <string name="abft">ABFT</string>
    <string name="value_abft">value abft</string>
    <string name="trt_1">TRT 1</string>
    <string name="value_trt_1">value trt 1</string>
    <string name="trt_2">TRT 2</string>
    <string name="value_trt_2">value trt 2</string>
    <string name="rpm_puls">RPM Puls</string>
    <string name="value_rpm_puls">value rpm puls</string>
    <string name="value_ont_offt">value ont offt</string>
    <string name="abt_abft">ABT / ABFT</string>
    <string name="value_abt_abft">value abt abft</string>
    <string name="val_rpm_puls">val rpm puls</string>
    <string name="timing_b">Timing B</string>
    <string name="value_timing_b">value timing b</string>
    <string name="timing_d">Timing D</string>
    <string name="value_timing_d">value timing D</string>
    <string name="timing_f">Timing F</string>
    <string name="value_timing_f">value timing f</string>
    <string name="timing_g">Timing G</string>
    <string name="value_timing_g">value timing g</string>
    <string name="value_timing_h">value timing h</string>
    <string name="timing_h">Timing H</string>
    <string name="rev_cut">Rev Cut</string>
    <string name="value_ref_cut">value ref cut</string>
    <string name="rev_limit">Rev Limit</string>
    <string name="value_rev_limit">value rev limit</string>
    <string name="ont_offt">ONT / OFFT</string>
    <string name="timing_c">Timing C</string>
    <string name="value_timing_c">value timing c</string>
    <string name="load">LOAD</string>
    <string name="blip_level">Blip Level</string>
    <string name="na">n/a</string>
    <string name="cut">Cut</string>
    <string name="qs_sensitivity">QS Sensitivity</string>
    <string name="blip_sensitivity">Blip Sensitivity</string>
    <string name="stop">Stop</string>
    <string name="launch_control">Launch Control</string>
    <string name="kill_time">Kill Time</string>
    <string name="read_sensor">Read Sensor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_main_fragment">TAB MAIN FRAGMENT</string>
    <string name="base_rpm_fragment">Base RPM Fragment</string>
    <string name="log_fragment">Log Fragment</string>
    <string name="free_rpm">FREE RPM</string>
    <string name="based_rpm">BASED RPM</string>
    <string name="bypass">BYPASS</string>
    <string name="read">Read</string>
    <string name="mode_rpm">Mode FREE RPM</string>
    <string name="mode_based">Mode BASED RPM</string>
    <string name="mode_bypass">Mode BYPASS</string>
    <string name="play_blip">PLAY BLIP</string>
    <string name="blip">BLIP</string>
    <string name="auto_warmup">AUTO WARMUP</string>
    <string name="event">Event</string>
    <string name="time">time</string>
    <string name="rpm">RPM</string>
    <string name="_1750_3000">1750 – 3000</string>
    <string name="_3000_4500">3000 – 4500</string>
    <string name="_4500_6000">4500 – 6000</string>
    <string name="_6000_7500">6000 – 7500</string>
    <string name="_7500_10000">7500 – 10000</string>
    <string name="_10000_16000">10000 – 16000</string>
    <string name="save">save</string>
    <string name="launch_controll">LAUNCH CONTROLL</string>
    <string name="rev_cut_time">Rev Cut Time</string>
    <string name="a2">A2</string>
    <string name="x">X</string>
</resources>
