<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AndraActivity">

    <androidx.appcompat.widget.Toolbar
        android:background="@color/aneh"
        android:id="@+id/toolbarFragment"
        android:layout_width="match_parent"
        android:minHeight="35dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_height="35dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:text="@string/a2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/x"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_load"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="-3dp"
                android:layout_marginRight="-3dp"
                android:layout_toStartOf="@+id/btn_save"
                android:layout_toLeftOf="@+id/btn_save"
                android:padding="10dp"
                android:text="@string/load"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="-3dp"
                android:layout_marginRight="-3dp"
                android:layout_toStartOf="@+id/btn_disconnect"
                android:layout_toLeftOf="@+id/btn_disconnect"
                android:padding="10dp"
                android:text="@string/save"
                android:textSize="12sp" />
            <Button
                android:id="@+id/btn_disconnect"
                android:textSize="12sp"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/oranyeu"
                android:layout_alignParentEnd="true"
                android:text="@string/disconnect"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayoutFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aneh"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/pagerAdapter" />
</LinearLayout>